added more styling on homepage partial

--- a/styles/sass/_nav.scss
+++ b/styles/sass/_nav.scss
@@ -1,3 +1,6 @@
+@import "body";
+@import "typography";
+
 nav {
     display: flex;
     justify-content: flex-end;
@@ -21,7 +24,13 @@ nav {
             }
         }
     }
-}    
+}  
+
+nav {
+    a:hover {
+        color: $light-blue;
+    }
+}
 
 
 
