--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,6 +1,7 @@
 @import "setup";
-@import "body";
 @import "typography";
+@import "body";
+@import "nav";
 @import "buttons";
 
 @import "homepage";
