--- a/styles/sass/_homepage.scss
+++ b/styles/sass/_homepage.scss
@@ -1,43 +1,56 @@
 @import "body";
-@import "nav";
+@import "typography";
+@import "buttons";
 
-.full-width {
-	left: 50%;
-	margin-left: -50vw;
-	margin-right: 29.7vw;
-	max-width: 100vw;
-	position: relative;
-	right: 50%;
-	width: 100vw;
-}
+// .full-width {
+// 	left: 50%;
+// 	margin-left: -50vw;
+// 	margin-right: 29.7vw;
+// 	max-width: 100vw;
+// 	position: relative;
+// 	right: 50%;
+// 	width: 100vw;
+// }
 
 .home-header {
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), url(../images/header-image.jpg);
-    height: 100vh;
-    .home-header-img {
-        display: flex;
-        width: 750px;
-    }
+    background-size: cover; /* or contain depending on what you want */
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 90vh;
+    position: relative;
+    // .home-header-img {
+    //     display: flex;
+    //     width: 750px;
+    // }
 }
 
-.header-container {
-    border: 2px solid cornflowerblue;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
-    padding-top: 5rem;
+// .header-container { 
+//     display: flex;
+//     flex-direction: row;
+//     align-items: flex-start;
+//     justify-content: space-between;
+//     padding-top: 5rem;
 
+// }
+
+.home-header-img {
+    position: absolute;
+    width: 700px;
+    top: 175px;
+    left: 580px;
 }
 
-.home-h1 {
-    border: 2px solid cornflowerblue;
-    display: flex;
+.home-h1 { 
     font-family: $header-font;
     color: $white;
     font-size: 5rem;
     text-transform: uppercase;
     width: 200px;
+    position: absolute;
+    top: 150px;
+    left: 110px;
+    margin: 0;
 }
 
 .home-main {
@@ -45,6 +58,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 8rem 2rem;
     .home-main-h2 {
         text-align: center;
         display: flex;
@@ -58,9 +72,81 @@
         display: flex;
         font-family: $body-font;
         color: $white;
-        font-size:
+        font-size: 1rem;
+        line-height: 1.5rem;
+    }   
+}
 
+.home-main-button {
+    display: flex;
+    justify-content: center;
+}
+
+.new-additions-container {
+    background-color: $green;
+    display: flex;
+    img {
+        display: flex;
+        box-shadow: 20px 20px 0 4px $light-blue;
+        width:
     }
+    .additions-content {
+        display: flex;
+        flex-direction: column;
+        padding: 2rem 5rem 5rem;
+        width: 700px;
+        color: $white;
+        h3 {
+            text-transform: uppercase;
+            font-family: $header-font;
+            letter-spacing: .1rem;
+        }
+        p {
+            font-size: 1rem;
+            margin: 0;
+        }
+        button {
+            max-width: 170px;
+            margin-top: 2rem;
+        }
+    }
+}
+
+.nemo-container {
+    background-color: $green;
+    display: flex;
+    flex-direction: row-reverse;
+    img {
+        display: flex;
+        box-shadow: -20px 20px 0 4px $light-blue;
+    }
+    .nemo-content {
+        display: flex;
+        flex-direction: column;
+        padding: 5rem 5rem 2rem;
+        width: 700px;
+        color: $white;
+        h3 {
+            text-transform: uppercase;
+            font-family: $header-font;
+            letter-spacing: .1rem;
+            
+        }
+        p {
+            font-size: 1rem;
+            margin: 0;
+        }
+        button {
+            max-width: 170px;
+            margin-top: 2rem;
+        }
+    }
+}
+
+.list-icon {
+    background-color: $dark-blue;
+    display: flex;
+
 }
 
 
