--- a/styles/style.css
+++ b/styles/style.css
@@ -1,59 +1,9 @@
-a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
   display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:after, blockquote:before, q:after, q:before {
-  content: '';
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration, input[type=search]::-webkit-search-results-button, input[type=search]::-webkit-search-results-decoration {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-}
-
-input[type=search] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -webkit-box-sizing: content-box;
-  box-sizing: content-box;
-}
-
-textarea {
-  overflow: auto;
-  vertical-align: top;
-  resize: vertical;
 }
 
 audio, canvas, video {
   display: inline-block;
-  max-width: 100%;
 }
 
 audio:not([controls]) {
@@ -66,7 +16,7 @@ audio:not([controls]) {
 }
 
 html {
-  font-size: 100%;
+  font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
@@ -79,17 +29,66 @@ a:active, a:hover {
   outline: 0;
 }
 
+h1 {
+  font-size: 2em;
+}
+
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+
+b, strong {
+  font-weight: 700;
+}
+
+dfn {
+  font-style: italic;
+}
+
+mark {
+  background: #ff0;
+  color: #000;
+}
+
+code, kbd, pre, samp {
+  font-family: monospace, serif;
+  font-size: 1em;
+}
+
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+q {
+  quotes: \201C \201D \2018 \2019;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sup {
+  top: -.5em;
+}
+
+sub {
+  bottom: -.25em;
+}
+
 img {
   border: 0;
-  -ms-interpolation-mode: bicubic;
 }
 
-figure {
-  margin: 0;
-}
-
-form {
-  margin: 0;
+svg:not(:root) {
+  overflow: hidden;
 }
 
 fieldset {
@@ -98,24 +97,14 @@ fieldset {
   padding: .35em .625em .75em;
 }
 
-legend {
-  border: 0;
-  padding: 0;
-  white-space: normal;
-}
-
 button, input, select, textarea {
+  font-family: inherit;
   font-size: 100%;
   margin: 0;
-  vertical-align: baseline;
 }
 
 button, input {
   line-height: normal;
-}
-
-button, select {
-  text-transform: none;
 }
 
 button, html input[type=button], input[type=reset], input[type=submit] {
@@ -123,7 +112,7 @@ button, html input[type=button], input[type=reset], input[type=submit] {
   cursor: pointer;
 }
 
-button[disabled], html input[disabled] {
+button[disabled], input[disabled] {
   cursor: default;
 }
 
@@ -143,11 +132,6 @@ input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-se
   -webkit-appearance: none;
 }
 
-button::-moz-focus-inner, input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-
 textarea {
   overflow: auto;
   vertical-align: top;
@@ -158,39 +142,13 @@ table {
   border-spacing: 0;
 }
 
-button, html, input, select, textarea {
-  color: #222;
-}
-
-::-moz-selection {
-  background: #b3d4fc;
-  text-shadow: none;
-}
-
-::selection {
-  background: #b3d4fc;
-  text-shadow: none;
-}
-
-img {
-  vertical-align: middle;
-}
-
-fieldset {
-  border: 0;
+body, figure {
   margin: 0;
+}
+
+legend, button::-moz-focus-inner, input::-moz-focus-inner {
+  border: 0;
   padding: 0;
-}
-
-textarea {
-  resize: vertical;
-}
-
-.chromeframe {
-  margin: .2em 0;
-  background: #ccc;
-  color: #000;
-  padding: .2em 0;
 }
 
 .clearfix:after {
@@ -207,18 +165,8 @@ textarea {
   box-sizing: border-box;
 }
 
-.visuallyHidden:not(:focus):not(:active) {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
-  clip: rect(0 0 0);
-  overflow: hidden;
+img {
+  max-width: 100%;
 }
 
 html,
@@ -295,57 +243,123 @@ nav ul li a {
   font-family: "Barlow", sans-serif;
 }
 
-.full-width {
-  left: 50%;
-  margin-left: -50vw;
-  margin-right: 29.7vw;
-  max-width: 100vw;
-  position: relative;
-  right: 50%;
-  width: 100vw;
+nav a:hover {
+  color: #86e0f9;
+}
+
+html,
+body {
+  font-size: 125%;
+  /* 125% = 20px = 1rem */
+}
+
+img {
+  max-width: 100%;
+}
+
+.wrapper {
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+.find-button {
+  background: #86e0f9;
+  padding: .7rem 1.5rem;
+  color: #0c1423;
+  border: none;
+  text-transform: uppercase;
+  font-family: "Barlow", sans-serif;
+  font-size: 1rem;
+}
+
+.read-button {
+  background: #0c1423;
+  padding: .7rem 1.5rem;
+  color: #ffffff;
+  border: none;
+  text-transform: uppercase;
+  font-family: "Barlow", sans-serif;
+  font-size: 1rem;
+}
+
+html,
+body {
+  font-size: 125%;
+  /* 125% = 20px = 1rem */
+}
+
+img {
+  max-width: 100%;
+}
+
+.wrapper {
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+html,
+body {
+  font-size: 125%;
+  /* 125% = 20px = 1rem */
+}
+
+img {
+  max-width: 100%;
+}
+
+.wrapper {
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+.find-button {
+  background: #86e0f9;
+  padding: .7rem 1.5rem;
+  color: #0c1423;
+  border: none;
+  text-transform: uppercase;
+  font-family: "Barlow", sans-serif;
+  font-size: 1rem;
+}
+
+.read-button {
+  background: #0c1423;
+  padding: .7rem 1.5rem;
+  color: #ffffff;
+  border: none;
+  text-transform: uppercase;
+  font-family: "Barlow", sans-serif;
+  font-size: 1rem;
 }
 
 .home-header {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0))), url(../images/header-image.jpg);
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), url(../images/header-image.jpg);
-  height: 100vh;
+  background-size: cover;
+  /* or contain depending on what you want */
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 90vh;
+  position: relative;
 }
 
-.home-header .home-header-img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 750px;
-}
-
-.header-container {
-  border: 2px solid cornflowerblue;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding-top: 5rem;
+.home-header-img {
+  position: absolute;
+  width: 700px;
+  top: 175px;
+  left: 580px;
 }
 
 .home-h1 {
-  border: 2px solid cornflowerblue;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   font-family: "Barlow", sans-serif;
   color: #ffffff;
   font-size: 5rem;
   text-transform: uppercase;
   width: 200px;
+  position: absolute;
+  top: 150px;
+  left: 110px;
+  margin: 0;
 }
 
 .home-main {
@@ -360,6 +374,7 @@ nav ul li a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 8rem 2rem;
 }
 
 .home-main .home-main-h2 {
@@ -373,6 +388,7 @@ nav ul li a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  font-size: 2rem;
 }
 
 .home-main .home-main-p {
@@ -381,6 +397,124 @@ nav ul li a {
   display: flex;
   font-family: "Lato", sans-serif;
   color: #ffffff;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.home-main-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.new-additions-container {
+  background-color: #0f614e;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.new-additions-container img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-shadow: 20px 20px 0 4px #86e0f9;
+          box-shadow: 20px 20px 0 4px #86e0f9;
+}
+
+.new-additions-container .additions-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 2rem 5rem 5rem;
+  width: 700px;
+  color: #ffffff;
+}
+
+.new-additions-container .additions-content h3 {
+  text-transform: uppercase;
+  font-family: "Barlow", sans-serif;
+  letter-spacing: .1rem;
+}
+
+.new-additions-container .additions-content p {
+  font-size: 1rem;
+  margin: 0;
+}
+
+.new-additions-container .additions-content button {
+  max-width: 170px;
+  margin-top: 2rem;
+}
+
+.nemo-container {
+  background-color: #0f614e;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+.nemo-container img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-shadow: -20px 20px 0 4px #86e0f9;
+          box-shadow: -20px 20px 0 4px #86e0f9;
+}
+
+.nemo-container .nemo-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 5rem 5rem 2rem;
+  width: 700px;
+  color: #ffffff;
+}
+
+.nemo-container .nemo-content h3 {
+  text-transform: uppercase;
+  font-family: "Barlow", sans-serif;
+  letter-spacing: .1rem;
+}
+
+.nemo-container .nemo-content p {
+  font-size: 1rem;
+  margin: 0;
+}
+
+.nemo-container .nemo-content button {
+  max-width: 170px;
+  margin-top: 2rem;
+}
+
+html,
+body {
+  font-size: 125%;
+  /* 125% = 20px = 1rem */
+}
+
+img {
+  max-width: 100%;
+}
+
+.wrapper {
+  max-width: 1024px;
+  margin: 0 auto;
 }
 
 html,
@@ -442,6 +576,60 @@ nav ul li a {
   font-family: "Barlow", sans-serif;
 }
 
+nav a:hover {
+  color: #86e0f9;
+}
+
+html,
+body {
+  font-size: 125%;
+  /* 125% = 20px = 1rem */
+}
+
+img {
+  max-width: 100%;
+}
+
+.wrapper {
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+.find-button {
+  background: #86e0f9;
+  padding: .7rem 1.5rem;
+  color: #0c1423;
+  border: none;
+  text-transform: uppercase;
+  font-family: "Barlow", sans-serif;
+  font-size: 1rem;
+}
+
+.read-button {
+  background: #0c1423;
+  padding: .7rem 1.5rem;
+  color: #ffffff;
+  border: none;
+  text-transform: uppercase;
+  font-family: "Barlow", sans-serif;
+  font-size: 1rem;
+}
+
+html,
+body {
+  font-size: 125%;
+  /* 125% = 20px = 1rem */
+}
+
+img {
+  max-width: 100%;
+}
+
+.wrapper {
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
 html,
 body {
   font-size: 125%;
@@ -499,4 +687,327 @@ nav ul li a {
   text-decoration: none;
   text-transform: uppercase;
   font-family: "Barlow", sans-serif;
+}
+
+nav a:hover {
+  color: #86e0f9;
+}
+
+html,
+body {
+  font-size: 125%;
+  /* 125% = 20px = 1rem */
+}
+
+img {
+  max-width: 100%;
+}
+
+.wrapper {
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+.find-button {
+  background: #86e0f9;
+  padding: .7rem 1.5rem;
+  color: #0c1423;
+  border: none;
+  text-transform: uppercase;
+  font-family: "Barlow", sans-serif;
+  font-size: 1rem;
+}
+
+.read-button {
+  background: #0c1423;
+  padding: .7rem 1.5rem;
+  color: #ffffff;
+  border: none;
+  text-transform: uppercase;
+  font-family: "Barlow", sans-serif;
+  font-size: 1rem;
+}
+
+article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
+  display: block;
+}
+
+audio, canvas, video {
+  display: inline-block;
+}
+
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+[hidden] {
+  display: none;
+}
+
+html {
+  font-family: sans-serif;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
+a:focus {
+  outline: thin dotted;
+}
+
+a:active, a:hover {
+  outline: 0;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+
+b, strong {
+  font-weight: 700;
+}
+
+dfn {
+  font-style: italic;
+}
+
+mark {
+  background: #ff0;
+  color: #000;
+}
+
+code, kbd, pre, samp {
+  font-family: monospace, serif;
+  font-size: 1em;
+}
+
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+q {
+  quotes: \201C \201D \2018 \2019;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sup {
+  top: -.5em;
+}
+
+sub {
+  bottom: -.25em;
+}
+
+img {
+  border: 0;
+}
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+fieldset {
+  border: 1px solid silver;
+  margin: 0 2px;
+  padding: .35em .625em .75em;
+}
+
+button, input, select, textarea {
+  font-family: inherit;
+  font-size: 100%;
+  margin: 0;
+}
+
+button, input {
+  line-height: normal;
+}
+
+button, html input[type=button], input[type=reset], input[type=submit] {
+  -webkit-appearance: button;
+  cursor: pointer;
+}
+
+button[disabled], input[disabled] {
+  cursor: default;
+}
+
+input[type=checkbox], input[type=radio] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+}
+
+input[type=search] {
+  -webkit-appearance: textfield;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+}
+
+input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+textarea {
+  overflow: auto;
+  vertical-align: top;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+body, figure {
+  margin: 0;
+}
+
+legend, button::-moz-focus-inner, input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: '';
+  clear: both;
+  height: 0;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+img {
+  max-width: 100%;
+}
+
+html,
+body {
+  font-size: 125%;
+  /* 125% = 20px = 1rem */
+}
+
+img {
+  max-width: 100%;
+}
+
+.wrapper {
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+html,
+body {
+  font-size: 125%;
+  /* 125% = 20px = 1rem */
+}
+
+img {
+  max-width: 100%;
+}
+
+.wrapper {
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 20rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 1rem 0;
+  list-style-type: none;
+}
+
+nav ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+nav ul li a {
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: "Barlow", sans-serif;
+}
+
+nav a:hover {
+  color: #86e0f9;
+}
+
+html,
+body {
+  font-size: 125%;
+  /* 125% = 20px = 1rem */
+}
+
+img {
+  max-width: 100%;
+}
+
+.wrapper {
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+.find-button {
+  background: #86e0f9;
+  padding: .7rem 1.5rem;
+  color: #0c1423;
+  border: none;
+  text-transform: uppercase;
+  font-family: "Barlow", sans-serif;
+  font-size: 1rem;
+}
+
+.read-button {
+  background: #0c1423;
+  padding: .7rem 1.5rem;
+  color: #ffffff;
+  border: none;
+  text-transform: uppercase;
+  font-family: "Barlow", sans-serif;
+  font-size: 1rem;
 }
