--- a/styles/sass/_homepage.scss
+++ b/styles/sass/_homepage.scss
@@ -93,7 +93,8 @@
     display: flex;
     img {
         display: flex;
-        box-shadow: 30px 30px 0 4px $light-blue;
+        box-shadow: 30px 30px 0 0 $light-blue;
+        margin-top: -1.5rem;
     }
     .additions-content {
         display: flex;
@@ -130,7 +131,8 @@
     flex-direction: row-reverse;
     img {
         display: flex;
-        box-shadow: -30px 30px 0 4px $light-blue;
+        box-shadow: -30px 30px 0 0 $light-blue;
+        margin-top: 1.5rem;
     }
     .nemo-content {
         display: flex;
@@ -172,7 +174,7 @@
         display: flex;
         flex-wrap: wrap;
         color: $white;
-        padding: 3rem 0 1rem;
+        padding: 3rem 0 2.5rem;
         justify-content: center;
     }
 }
@@ -185,7 +187,7 @@
         font-family: $header-font;
         text-transform: uppercase;
         font-size: 1rem;
-        margin: 0 0 0 .5rem;
+        // margin: 0 0 0 .5rem;
     }
     p {
         font-family: $body-font;
@@ -196,19 +198,58 @@
     }
 }
 
+.locations {
+    margin-left: 20px;
+}
+
+.community {
+    margin-left: 15px;
+}
+
+.blogs {
+    margin-left: 21px;
+}
+
+.in-touch {
+    margin-left: 19px;
+}
+
 .list-h2 {
     display: flex;
     align-items: center;
+    position: relative;
+}
+
+.list-icon-circle {
+    position: absolute;
+    border: 10px solid $light-blue;
+    background-color: $light-blue;
+    padding: 10px;
+    border-radius: 50%;
 }
 
 .fas {
-    border: 5px solid $light-blue;
-    background-color: $light-blue;
-    border-radius: 50%;
+    z-index: 1;
     color: $dark-blue;
     padding: .5rem;
     font-size: 1rem;
+}
 
+.fa-file {
+    margin-left: 3px;
+}
+
+.fa-users {
+    margin-left: -2px;
+}
+
+.fa-location-arrow {
+    margin-left: -1px;
+    padding-top: 0.6rem;
+}
+
+.fa-phone {
+    padding-top: 0.6rem;
 }
 
 .profile-container {
@@ -247,7 +288,7 @@
     .square-img {
         width: 250px;
         max-width: auto;
-        box-shadow: 30px 30px 0 4px $light-blue;
+        box-shadow: 30px 30px 0 0 $light-blue;
         margin: 5rem 5rem 0 0;
     }
 }
@@ -257,12 +298,35 @@
 .gallery {
     background-color: $green;
     display: flex;
-    img {
-        padding: 3rem .3rem;
-        width: 320px;
-        max-width: auto;
+}
+    
+.gallery-ul {
+    display: flex;
+    li {
+        padding: 2rem .5rem;
     }
 }
+
+// FIRST FEW ATTEMPTS TO MAKE THE IMAGES OPTIMALLY RESPONSIVE FROM THE START.
+
+    // .gallery-container {
+    //     display: flex;
+    //     justify-content: center;
+        // width: 100%;
+        // list-style: none;
+        // width: 320px;
+    // }
+    // img {
+    //     display: flex;
+    //     padding: 3rem .3rem;
+    //     // width: 320px;
+    //     // width: 100%;
+    //     // height: auto;
+    //     // max-width: auto;
+    // }
+// }
+
+// TICKER WITH IMG IN GALLERY SECTION TO SHRINK, AND RESIZE FOR MOBILE.
 
 @import "footer";
 
